# tech-doc

./: .editorconfig  .pre-commit-config.yaml  404.html  README.md  index.html  mise.toml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
docs/technologies/: ansible.md  archi.md  argocd.md  atlantis.md  c4_plantuml.md  chocolatey.md  containerd.md  devbox.md  devspace.md  diagrams.md  docker.md  docker_desktop.md  drawio.md  elastic.md  fluxcd.md  gitleaks.md  gitpod.md  grafana.md  helm.md  ice_panel.md  infracost.md  istio.md  jenkins.md  just.md  k3s.md  k9s.md  kind.md  kong.md  kubernetes.md  kustomize.md  kwok.md  loki.md  mermaid.md  microk8s.md  minikube.md  miro.md  mise.md  nginx.md  plantuml.md  podman.md  (+12 more)
docs/todo/: ansible.md  archi.md  argocd.md  atlantis.md  c4_plantuml.md  chocolatey.md  containerd.md  devbox.md  devspace.md  diagrams.md  docker.md  docker_desktop.md  drawio.md  elastic.md  fluxcd.md  gitleaks.md  gitpod.md  grafana.md  helm.md  ice_panel.md  infracost.md  istio.md  jenkins.md  just.md  k3s.md  k9s.md  kind.md  kong.md  kubernetes.md  kustomize.md  kwok.md  loki.md  mermaid.md  microk8s.md  minikube.md  miro.md  mise.md  nginx.md  plantuml.md  podman.md  (+13 more)
search/: search_index.json
tags/: index.html
technologies/ansible/: index.html
technologies/archi/: index.html
technologies/argocd/: index.html
technologies/atlantis/: index.html
technologies/c4_plantuml/: index.html
technologies/chocolatey/: index.html
technologies/containerd/: index.html
technologies/devbox/: index.html
(+96 files in other folders)
