[project]
name = "tech-doc"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"

[tool.poetry]
package-mode = false

[tool.poe.tasks.start]
cmd  = "mkdocs serve"
help = "start docs server"

[tool.poe.tasks.build]
cmd  = "mkdocs build"
help = "build docs"

[tool.poe.tasks.deploy]
cmd  = "mkdocs gh-deploy --force"
help = "deploy mkdocs to github pages"
